Allow high min_final_cltv_expiry to extend the expiry timeout for HTLCs
